fix: update body background color for improved contrast

--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@
   
   :root {
     --body-color: hsl(0, 5%, 10%);
-    --body-bg-color: hsl(210, 20%, 98%);
+    /* --body-bg-color: hsl(210, 20%, 98%); */
+    --body-bg-color: hsl(0, 100%, 33%);
     --link-visited: hsl(0, 100%, 33%);
     /* --link-focus-outline: hsl(220, 90%, 52%); */
     --link-focus-outline: hsl(210, 20%, 98%);
